--- a/icons.css
+++ b/icons.css
@@ -1,82 +1,106 @@
-.icon-color{
+.icon-color {
     color: grey;
 }
-.icon-x{
+
+.icon-x {
     font-size: 20px;
     cursor: pointer;
 }
-.precent-color{
+
+.precent-color {
     color: red;
     font-weight: 600;
 }
-.text-color{
+
+.text-color {
     color: rgb(96, 96, 96);
 }
-.bold{
+
+.bold {
     font-weight: 550;
 }
-.font-size-big{
+
+.font-size-big {
     font-size: 12px;
     font-weight: 700;
 }
-.font-size-small{
+
+.font-size-small {
     font-size: 11px;
     font-weight: 700;
 }
-.font-size-smaller{
+
+.font-size-smaller {
     font-size: 9px;
     font-weight: 300;
     color: rgb(108, 108, 108);
 }
-.decoration-none{
+
+.decoration-none {
     border: 0;
     color: rgb(224, 218, 218);
     width: 1000px;
 }
-input::placeholder{
+
+input::placeholder {
     color: rgb(210, 207, 207);
 }
-input:focus{
+
+input:focus {
     color: black;
     outline: none;
     font-weight: 600;
-}   
+}
 
-.rotate{
+.rotate {
     transform: rotate(180deg);
 }
-.button {     
-    color: #EE5D57; 
-    background-color: transparent; 
-    border: 1px solid #EE5D57; 
-    height: 30px; 
-    font-size: 13px; 
-    font-weight: 600;       
+
+.button {
+    color: #EE5D57;
+    background-color: transparent;
+    border: 1px solid #EE5D57;
+    height: 30px;
+    font-size: 13px;
+    font-weight: 600;
 }
-.company-name{
+
+.tracking-button {
+    color: #4FAC2E;
+    background-color: transparent;
+    border: 1px solid #4FAC2E;
+}
+
+.company-name {
     font-size: 15px;
     font-weight: 700;
 }
-.website{
+
+.website {
     font-size: 12px;
     color: rgb(151, 150, 150);
 }
-.width{
+
+.width {
     width: 400px;
 }
-.qaText{
-    font-weight: 600; 
+
+.qaText {
+    font-weight: 600;
     color: grey;
 }
-.text{
-    font-weight: 600; 
+
+.text {
+    font-weight: 600;
     font-size: 15px;
 }
-.search-results{
+
+.search-results {
     height: 500px;
     width: 20px;
 }
-.company-initial{
+
+.company-initial {
     color: white;
     font-size: 25px;
     font-weight: 600;
