--- a/icons.css
+++ b/icons.css
@@ -1,10 +1,56 @@
+* {
+    font-family: Manrope;
+    box-sizing: border-box;
+}
+
+.sidebar-container {
+    z-index: 1;
+    height: 1420px;
+}
+
+.sidebar-dropdown-list {
+    height: 80px;
+    border: 0.1px solid rgb(226, 225, 225);
+}
+
+.notification-container {
+    background-color: #ee7274;
+    border-radius: 15px;
+    font-size: 11px
+}
+
 .icon-color {
     color: grey;
 }
 
 .icon-x {
-    font-size: 20px;
+    display: none;
+    font-size: 15px;
     cursor: pointer;
+}
+
+.notification {
+    background-color: #EFF3F9;
+    height: 30px;
+    width: 30px;
+}
+
+.profile-pic {
+    background-color: darkgreen;
+    height: 30px;
+    width: 30px;
+}
+
+.main-div {
+    background-color: #f7f7f7;
+}
+
+.search-results-container {
+    display: none;
+}
+
+.woman-image {
+    z-index: 1;
 }
 
 .precent-color {
@@ -39,7 +85,6 @@
 .decoration-none {
     border: 0;
     color: rgb(224, 218, 218);
-    width: 1000px;
 }
 
 input::placeholder {
@@ -81,13 +126,14 @@ input:focus {
     color: rgb(151, 150, 150);
 }
 
-.width {
+.card-div-width {
     width: 400px;
 }
 
 .qaText {
     font-weight: 600;
     color: grey;
+
 }
 
 .text {
@@ -104,4 +150,58 @@ input:focus {
     color: white;
     font-size: 25px;
     font-weight: 600;
+}
+
+.footer-container {
+    background-color: #F7F7F7;
+}
+
+.card-div {
+    background-color: white;
+    width: 450px;
+    border-radius: 10px;
+}
+
+.quotes-color {
+    color: #FFCECE;
+}
+
+.card-text {
+    max-width: 230px;
+}
+
+@media screen and (max-width: 600px) {
+    #woman-excited {
+        height: 250px;
+        width: 300px;
+    }
+}
+
+@media (max-width: 1090px) {
+    #saContainer {
+        height: 970px;
+    }
+
+    .card-div-width {
+        width: 300px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .nav-none {
+        display: none;
+    }
+
+    .decoration-none {
+        width: 1000px;
+    }
+
+
+}
+
+@media (max-width: 1399px) {
+    .sidebar-container {
+        display: none;
+    }
+
 }
