--- a/icons.css
+++ b/icons.css
@@ -85,6 +85,8 @@
 .decoration-none {
     border: 0;
     color: rgb(224, 218, 218);
+    min-width: 182px;
+
 }
 
 input::placeholder {
@@ -119,6 +121,7 @@ input:focus {
 .company-name {
     font-size: 15px;
     font-weight: 700;
+    width: 150px;
 }
 
 .website {
@@ -142,7 +145,7 @@ input:focus {
 }
 
 .search-results {
-    height: 500px;
+    height: 600px;
     width: 20px;
 }
 
@@ -150,6 +153,8 @@ input:focus {
     color: white;
     font-size: 25px;
     font-weight: 600;
+    left: 15px;
+    top: 5px;
 }
 
 .footer-container {
@@ -170,30 +175,41 @@ input:focus {
     max-width: 230px;
 }
 
+.nav-none {
+    z-index: 100;
+}
+
 @media screen and (max-width: 600px) {
     #woman-excited {
-        height: 250px;
-        width: 300px;
+        height: 200px;
+        width: 250px;
     }
 }
 
 @media (max-width: 1090px) {
     #saContainer {
-        height: 970px;
+        height: 1200px;
     }
 
     .card-div-width {
-        width: 300px;
+        width: 290px;
     }
 }
 
 @media (min-width: 1400px) {
     .nav-none {
         display: none;
+
     }
 
     .decoration-none {
         width: 800px;
+    }
+}
+
+@media (min-width: 525px) {
+    .decoration-none {
+        width: 400px;
     }
 
 
