--- a/icons.css
+++ b/icons.css
@@ -10,11 +10,12 @@
 
 .shadow-sidebar-container {
     z-index: 2;
-    box-shadow: -15px 0 50px -2px #888
+    box-shadow: -15px -50px 50px -2px #888;
 }
 
 .shadow-search-container {
-    box-shadow: 0px -10px 50px -2px #888
+    box-shadow: 0px -10px 50px -2px #888;
+
 }
 
 .sidebar-dropdown-list {
@@ -193,11 +194,6 @@ input:focus {
     }
 }
 
-@media (max-width: 1090px) {
-    #saContainer {
-        height: 1100px;
-    }
-}
 
 @media (max-width: 1439px) {
     .search-results {
@@ -205,12 +201,50 @@ input:focus {
     }
 }
 
-@media (max-width: 1439px) {
-    .search-results {
-        height: 1100px;
+
+
+@media (max-width:1420px) {
+    .logo {
+        height: 25px;
+        width: 25px;
     }
 
-    .sidebar-container {
-        height: 1100;
+    .company-name {
+        font-size: 10px;
+    }
+
+    .company-initial {
+        left: 10px;
+        font-size: 10px;
+    }
+
+    .website {
+        font-size: 8px;
+    }
+
+    .button {
+        font-size: 10px
+    }
+
+    .card-div-width {
+        width: 100px;
+    }
+
+    .search-results {
+        width: 550px;
+        height: 400px;
+    }
+
+}
+
+@media (min-width:1200px) {
+    .main {
+        height: 800px;
+    }
+}
+
+@media (max-width:1200px) {
+    .main {
+        height: 900px;
     }
 }
